Style/style.css
.header {
    padding-top: 30px;
    padding-bottom: 10px;
}

.banner{
    text-align: center;
    padding: 27px;
    background-color: #f28500;
}

#promotion_icon {
    color: white;
    font-size: 80px;
    text-align: center;
}
.slogan{
    color: white;
    font-size: 15px;
    padding: 10px;
    text-align: center;
    border: 1px solid white;
    margin-top: 10px;
    margin-bottom: 10px;
    margin-left: 20px;
    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
}

/*Main content*/

#namelabel, #passwordlabel, #emaillabel, #numberlabel {
    width: 100%;
    margin-bottom: 18px;
    text-align: center;

}

.ui-field-contain {
    width: 100%;
    margin: 15px;
    text-align: center;

}

#name, #password, #email, #phoneNo {
    width: 100%;
    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
    text-align: center;
    padding: 10px;
    font-size: 14px;
}

#remember-label, #agree-label {
    width: 100%;
    margin-top: 18px;
    background-color: aliceblue;
    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
    text-align: center;
}

.login-title, .register-title {
    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
    text-align: left;
    font-size: larger;
    color: #f28500;
    margin: 20px;

}

#para{
    margin-top: -5px;
    margin-left: 20px;
}
#para1 {
    margin-top: 20px;
    font-size: 14px;
    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
    text-align: center;
}
#register-here {
    color: #f28500;
}
#login-btn, #register-btn {
    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
    width: 100%;
    font-size: large;
    background-color: #428fe5;
    color: white;
}

/* Bottom nav styling */

#bottom_nav {
    height: 50px;
    background: white;
}

#qrcode_icon, #cart_icon, #home_icon, #user_icon, #other_icon {
    color: #6c7075;
    font-size: 20px;
    border: 10px solid white;
    background: white;
    text-align: center;

}

